--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.timeoffbuddy</groupId>
     <artifactId>timeoffbuddy</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.2</version>
     <name>Time Off Buddy</name>
     <description>A tool used to determine how many pay periods there are before attaining a certain amount of time off.</description>
     <licenses>
@@ -29,6 +29,7 @@
     </properties>
     <build>
         <defaultGoal>jar</defaultGoal>
+        <finalName>timeoffbuddy</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
