--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.timeoffbuddy</groupId>
     <artifactId>timeoffbuddy</artifactId>
-    <version>2.0.1</version>
+    <version>3.0.0</version>
     <name>Time Off Buddy</name>
     <description>A tool used to determine how many pay periods there are before attaining a certain amount of time off.</description>
     <licenses>
@@ -27,10 +27,30 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.8.0</version>
+        </dependency>
+    </dependencies>
     <build>
         <defaultGoal>jar</defaultGoal>
         <finalName>timeoffbuddy</finalName>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.5.2</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                        <goal>shade</goal>
+                        </goals>
+                    </execution>
+                </executions>
+        </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
